connection between user and tasks. Get request
